[package]
name = "flux-web"
version = "0.4.0"
edition = "2024"
authors = ["Jeffery D. Mitchell <crusty-rustacean@gmail.com>"]
description = "An experiment in building a web application framework similar to ExpressJS"
license = "MIT"
repository = "https://github.com/crustyrustacean/flux-web"
keywords = ["server", "http", "static", "templates"]
categories = ["network-programming"]
readme = "README.md"
publish = false

[[bin]]
name = "flux-web"
path = "src/bin/main.rs"

[lib]
name = "flux_web_lib"

[dependencies]
http-body-util = "0.1"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1"


